[package]
name = "lucid-kv-client"
version = "0.2.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jpopesculian/lucid-kv-client"
documentation = "https://docs.rs/lucid-kv-client/"
repository = "https://github.com/jpopesculian/lucid-kv-client"
description = "A client for Lucid KV"
keywords = ["lucid", "kv", "database", "client", "api"]
categories = ["database", "web-programming::http-client", "api-bindings"]

[features]
default = ["rustls-tls", "serde-flexbuffers"]
rustls-tls = ["reqwest/rustls-tls"]
serde-json = ["serde", "serde_json"]
serde-flexbuffers = ["serde", "flexbuffers"]

[dependencies]
failure = "0.1"
fehler = "1.0"
flexbuffers = { version = "0.1", optional = true }
reqwest = { version = "0.10.6", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
percent-encoding = "2.1.0"
bytes = "0.5.5"
cfg-if = "0.1.10"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
